--- a/public/index.html
+++ b/public/index.html
@@ -14,5 +14,5 @@
   </body>
 </html>
 
-<link rel="stylesheet" type="text/css" href="main.css" />
-<script src="hoge.js"></script>
+<link rel="stylesheet" type="text/css" href="/main.css" />
+<script src="/hoge.js"></script>
